新建练习目录

--- a/object1/index.html
+++ b/object1/index.html
@@ -1,8 +1,128 @@
 <html>
     <head>
-        <title>淘宝-首页</title>
+        <title>淘宝网 - 淘！我喜欢</title>
     </head>
     <body>
-        <div>正在编写中...</div>
+		<!-- 导航栏 -->
+        <div class="dhl">
+			<div class = "dhl-z">
+			<ul>
+				<li>
+					<a>
+						<span class="span-region">中国大陆</span>
+						<span class="span-arrow"><span class="span-icon">◇</span></span>
+					</a>
+				</li>
+				<li>
+					<a>
+					<span class="span-region">等他十年1201</span>
+					<span class="span-arrow"><span class="span-icon">◇</span></span>
+					</a>
+				</li>
+				<li>
+					<a><span class="span-region">手机逛淘宝</span></a>
+				</li>
+			</ul><ul>
+				<li>
+					<a><span class="span-region">我的淘宝</span>
+					<span class="span-arrow"><span class="span-icon">◇</span></span></a>
+				</li>
+				<li>
+					<a><span class="span-region">购物车</span>
+					<span class="span-arrow"><span class="span-icon">◇</span></span></a>
+				</li>
+				<li>
+					<a><span class="span-region">收藏夹</span>
+					<span class="span-arrow"><span class="span-icon">◇</span></span></a>
+				</li>
+				<li>
+					<a><span class="span-region">商品分类</span></a>
+				</li>
+				<li>
+					<a><span class="span-region">免费开店</span></a>
+				</li>
+				<li>
+					<a><span class="span-region">千牛卖家中心</span>
+					<span class="span-arrow"><span class="span-icon">◇</span></span></a>
+				</li>
+
+				<li>
+					<a><span class="span-region">联系客服</span>
+					<span class="span-arrow"><span class="span-icon">◇</span></span></a>
+				</li>
+				<li>
+					<a><span class="span-region">网站导航</span>
+					<span class="span-arrow"><span class="span-icon">◇</span></span></a>
+				</li>			
+			</ul>
+			</div>
+		</div>
+		<!-- 搜索栏 -->
+		<div class="ssl">
+			
+		</div>
     </body>
 </html>
+<style>
+	*{
+		padding: 0;
+		margin: 0;
+	}
+	body{
+		color: #3c3c3c;
+		-webkit-font-smoothing: antialiased;
+		background-color: #f4f4f4;
+		font: 12px/1.5 tahoma,arial,'Hiragino Sans GB','\5b8b\4f53',sans-serif;
+	}
+	.dhl{
+		width: 100%;
+		margin: 0 auto;
+		text-align: center;
+		border-bottom: 1px solid #eee;
+	}
+	.dhl-z{
+		margin: 0 auto;
+		width: 1130px;
+		height: 35px;
+		line-height: 35px;
+		background-color: #f5f5f5;
+	}
+	.dhl ul,li{
+		display: inline-block;
+		font-size: 12px;
+	}
+	.dhl ul:first-child{
+		float: left;
+	}
+	.dhl ul:last-child{
+		float: right;
+	}
+	
+	.span-region{
+		float: left;
+		margin-right: 7px;
+	}
+	.span-arrow{
+		display: block;
+		width: 12px;
+		height: 6px;
+		line-height: 6px;
+		float: left;
+		overflow: hidden;
+		margin-top: 16px;
+	}
+	.span-icon{
+		font-family: global-iconfont;
+		font-size: 12px;
+		font-style: normal;
+		margin-top: -3px\9;
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscaleFont type;
+		margin-right: 5px;
+		_line-height: 33px;
+		color: #9c9c9c;
+		display: block;
+		margin-top: -4px;
+		margin-right: 20px;
+	}
+</style>
